<resources>
    <string name="app_name">SousChef</string>
    <string name="action_settings">Settings</string>

    <!-- API Constants -->
    <string name="api_base">http://159.203.61.63/v1/api/</string>
    <string name="ingredient_search">ingredients/search?term=</string>
    <string name="api_key">key=cs446</string>
    <string name="search_by_recipe">Search By Recipe</string>
    <string name="search_by_ingredients">Search By Ingredients</string>
    <string name="search_history_file_name">SearchHistory.txt</string>
    <string name="saved_recipes_file_name">SavedRecipes.txt</string>

    <!-- Toolbar Tabs Titles -->
    <string name="search_ingredients_tab">Search by Ingredients</string>
    <string name="search_recipe_tab">Search by Recipes</string>
    <string name="saved_recipes">Saved Recipes</string>
    <string name="search_history">Search History</string>
    <string name="search_results">Search Results</string>

    <!-- Add Ingredients Screen -->
    <string name="add_ingredients">Add Ingredients</string>
    <string name="hintEnterIngredient">Enter Ingredient</string>
    <string name="lblBtnAdd">Add</string>
    <string name="txtEmpty">None</string>
    <string name="lblBtnOptions">Options</string>
    <string name="lblBtnFeedMe">Feed Me</string>
    <string name="invalidIngredientMsg">Invalid ingredient: Please choose one of the suggested ingredients.</string>

    <!-- Search Options Screen -->
    <string name="cookTime">Cook Time</string>
    <string name="portions">Number of Portions</string>
    <string name="okButton">OK</string>
    <string name="cancelButton">CANCEL</string>

    <!-- Search By Recipe Name Screen -->
    <string name="hintEnterRecipeName">Enter Recipe Name</string>

    <string name="dummy_section_text">Section %1d is just a dummy section.</string>
    <string name="demo_external_activity">Demo External Activity</string>
    <string name="demo_collection">Demo Collection</string>


    <string name="savedRecipesDir">savedRecipes</string>
</resources>
