<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Enter ingredient box -->
    <EditText
        android:id="@+id/recipeNameTextItem"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/hintEnterRecipeName"
        android:layout_above="@+id/byNameOptionsBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <!-- Options button -->
    <Button
        android:id="@+id/byNameOptionsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblBtnOptions"
        android:layout_above="@+id/byNameFeedMeBtn"
        android:layout_centerHorizontal="true" />

    <!-- FEED ME button -->
    <Button
        android:id="@+id/byNameFeedMeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblBtnFeedMe"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>